# legal_actions_bridge/legal_actions_bridge/api/tax/list-tsutatsu.js
@@ -1,11 +1,0 @@
-import { sendJson } from '../../lib/common.js';
-import { proxyTax } from '../../lib/tax-proxy.js';
-
-export default async function handler(req, res) {
-  try {
-    const result = await proxyTax('/api/list-tsutatsu', req.query || {});
-    sendJson(res, 200, result);
-  } catch (error) {
-    sendJson(res, error.statusCode || 500, { error: error.message });
-  }
-}
